fix blog tile text overflow; add blog to Netlify CMS config

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,7 +56,7 @@
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
-  max-width: 800px;
+  max-width: 1000px;
   margin-top: 3rem;
 }
 
@@ -73,6 +73,8 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
+  overflow-y: hidden;
+  text-overflow: ellipsis;
 }
 
 .card:hover,
@@ -93,11 +95,9 @@
   line-height: 1.5;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.card .cardTextContainer {
+  height: inherit;
+  overflow: hidden;
 }
 
 .image {
@@ -115,12 +115,14 @@
 
 .card .cardTitle {
   position: absolute;
-  display: flex;
   margin: 10rem 1rem;
+  padding: 0 3px;
   font-size: 3rem;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   color: white;
+  background-color: black;
+  z-index: 999;
 }
 
 .card:hover .cardTitle {
@@ -129,19 +131,53 @@
 
 .card .cardTitleDark {
   position: absolute;
-  display: flex;
   margin: 10rem 1rem;
+  padding: 0 3px;
   font-size: 3rem;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   color: black;
+  background-color: white;
+  z-index: 999;
 }
 
 .card:hover .cardTitleDark {
   color: orange;
 }
 
+.cardText {
+  position: relative;
+}
+
+.cardText:hover {
+  color: black;
+}
+
 .content {
   width: 100%;
   max-width: 700px;
+}
+
+@media (max-width: 600px) {
+  .grid {
+    width: 100%;
+    /* flex-direction: column; */
+    /* background-color: gray; */
+  }
+
+  .card {
+    max-width: 8rem;
+    max-height: 8rem;
+    padding: 0.5rem;
+  }
+
+  .card .cardTitle {
+    margin: 5.5rem 1rem;
+    font-size: 1.5rem; 
+  }
+
+  .card .cardTitleDark {
+    margin: 5.5rem 1rem;
+    font-size: 1.5rem; 
+  }
 }
